{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player",
            "id": "a036778d-c7c1-44d1-8fd3-2fa38b6cf0b3",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "28da8455-1901-4bc0-87f1-2df72a27aef3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "75da2256-16a9-4aee-835d-05eebd1e1d0a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0f5c704-7478-4d5b-86cc-5ecd5b9c2b65",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b0c652d-6066-418b-8c0a-0fb0d7f416e2",
                    "path": "<HID::Saitek PLC Cyborg Rumble Pad>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9b1a0544-7d89-4682-bc9c-914fcb9415fd",
                    "path": "/ f51a)/Button 2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "95534401-20af-4a39-940b-7727a255a899",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "5f123a05-0eb8-4376-918a-5791b11e7bcd",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "fcbf0b65-4555-4115-951e-ec8d9d66b02b",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadPlus",
                    "id": "c14e7fa5-c915-4f15-8a3f-a7c6eb99bf67",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "9cf7cc1a-7184-4844-9d9d-e3d8bc78a60d",
                    "path": "<HID::Saitek PLC Cyborg Rumble Pad>/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "52c2ea35-1882-4d33-b07b-f9a992f9169a",
                    "path": "<HID::Saitek PLC Cyborg Rumble Pad>/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadJoystick",
                    "id": "b528136c-618c-4deb-b281-06b9658ade09",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "01e9c7ed-54d2-4c63-9ea4-f83537f8ed75",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "41eafd89-9646-45bf-bfd9-091411261e88",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamepadWebgl",
                    "id": "b54f5da7-58ce-4d34-9b14-146fa3808f4c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "bf4c65e8-489d-4f57-92fd-08c14221e3f2",
                    "path": "/ f51a)/Axis 4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "caae6169-715f-4db3-b357-9a1eaa9ba3f3",
                    "path": "/ f51a)/Axis 2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}